--- a/Styles/style.css
+++ b/Styles/style.css
@@ -6,7 +6,6 @@ body{
     font-family: 'Poppins', sans-serif;
     margin: 0;
 }
-
 section{
     margin-bottom: 100px;
 }
@@ -29,7 +28,7 @@ section{
 .header-wrapper .header-left{
     padding-left: 150px;
 }
-.header-wrapper .header-left h1{
+.header-left h1{
     font-weight: bold;
     font-size: 60px;
     line-height: 80px;
@@ -205,22 +204,18 @@ section{
 }
 
 
-
 /*-----------------
  Media Query 
  ----------------*/
 
 @media only screen and (max-width:688px){
-    body {
-        overflow-x: hidden;
-    }
-    .container{
-        width: 100%; 
+    .container{ 
+        width: 100%;
     }
     section{
         margin-bottom: 60px;
     }
-    .header-wrapper, .players-gallery, .latest-news{
+    .header-wrapper, .players-gallery, .result-area, .latest-news{
         width: 100%;
         grid-template-columns: repeat(1, 1fr);
         flex-direction: column;
@@ -229,17 +224,15 @@ section{
     .header-wrapper .header-left {
         padding-left: 16px;
     }
-    .header-wrapper .header-left h1{
+    .header-left h1{
         font-size: 32px;
         line-height: 47px;
     }
     .header-wrapper .header-right img{
         margin-top: 49px;
-        /* padding: 10px; */
         width: 339px;
         height: 259px;
     }
-    
     .scores {
         justify-content: space-around;
     }
@@ -252,9 +245,4 @@ section{
         margin-bottom: 20px;
     }
   
-
-
-
-
-
 }
